--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="title_location_setting">위치설정</string>
     <string name="keyword_location">위치</string>
     <string name="map_view">지도보기</string>
+    <string name="confirm">확인</string>
 
     <string name="menu_all">전체</string>
     <string name="menu_street">스트릿</string>
